task-alert: make sure it is clickable so can't have z-index of -1

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -592,8 +592,7 @@ input {
   background-color: #d3f2f8;
   color: #1d6e7f;
   border-top: 1px solid #8eb6bf;
-  border-bottom: 1px solid #8eb6bf;
-  z-index: -1; }
+  border-bottom: 1px solid #8eb6bf; }
 
 .task-desc {
   display: inline-block;
